DataStore Changelog (dates in dd/mm/yyyy)
===================


Version 2024.07.28 (28/07/2024)

- Fixes for The War Within

Version 2024.06.23 (23/06/2024)

- Several fixes for Cataclysm

Version 2024.05.20 (20/05/2024)

- Stopped using Ace libraries
- Using locals for all global functions
- Using new tables in the SV file. 

Version 2023.11.17 (17/11/2023)

- ToC Update for Vanilla

Version 2023.11.06 (06/11/2023)

- ToC Update for all versions

Version 2023.02.23 (23/02/2022)

- ToC Update for 10.0.05

Version 2022.11.16 (16/11/2022)

- ToC Update for 10.0.02

Version 2022.10.30 (30/10/2022)

- ToC Update for 10.0

Version 2022.10.25 (25/10/2022)

- ToC Update for all versions

Version 2022.06.05 (05/06/2022)

- ToC Update for all versions

Version 2022.03.14 (14/03/2022)

- ToC Update for all versions

Version 2021.10.03 (03/10/2021)

- As of this version, DataStore modules will be released in a single package compatible with all versions of the game.
- As of this version, the version number will no longer be 1.x or 9.x, but rather a date that clearly identifies when the release took place.
