@@ -5,6 +5,7 @@ DataStore Changelog (dates in dd/mm/yyyy)
 Version 2024.07.28 (28/07/2024)
 
 - Fixes for The War Within
+- Fixed improper scanning of the spellbook.
 
 Version 2024.06.23 (23/06/2024)
 
